fix: correct handle color change directive & styling issues with scrollbar

--- a/frontend/task-control/src/app/boards/board-details/board-details.component.css
+++ b/frontend/task-control/src/app/boards/board-details/board-details.component.css
@@ -7,7 +7,7 @@
   margin-top: 30px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 350px;
+  grid-template-rows: 450px;
   gap: 80px;
 }
 
