--- a/frontend/task-control/src/app/tasks/task-column/task-column.component.css
+++ b/frontend/task-control/src/app/tasks/task-column/task-column.component.css
@@ -6,12 +6,21 @@
 .col-content {
   padding: 30px 10px 10px 10px;
   height: 100%;
-  /* background-color: #F0F0F0;  */
-  overflow-y: scroll;
+  overflow-y: auto;
   display: grid;
   grid-template-rows: 50px;
   gap: 20px;
   position: relative;
+}
+
+.col-content::-webkit-scrollbar {
+  width: 10px;
+}
+
+.col-content::-webkit-scrollbar-thumb {
+  border-left: 5px transparent solid;
+  background-clip: padding-box;
+  background-color: darkgrey;
 }
 
 .title {
