--- a/frontend/task-control/src/app/tasks/task-details/task-details.component.css
+++ b/frontend/task-control/src/app/tasks/task-details/task-details.component.css
@@ -1,5 +1,15 @@
+.comments-list::-webkit-scrollbar {
+  width: 10px;
+}
+
+.comments-list::-webkit-scrollbar-thumb {
+  border-left: 5px transparent solid;
+  background-clip: padding-box;
+  background-color: darkgrey;
+}
+
 .container {
-  width: 90%;
+  width: 85%;
   margin: 50px auto 0 auto;
 }
 
@@ -14,12 +24,15 @@
   text-align: center;
 }
 
+.task-status {
+  margin-top: 10px;
+}
+
 .comments-block {
-  margin: 0 auto;
+  margin: 10px auto 0 auto;
   width: 80%;
-  height: 300px;
+  height: 400px;
   border: 1px solid gray;
-  overflow-y: scroll;
   display: grid;
   grid-template-rows: 90% 10%;
 }
@@ -34,14 +47,21 @@
   height: 100%;
   width: 100%;
   cursor: pointer;
+  border: 1px solid gray;
+  border-bottom: none;
+  border-right: none;
 }
 
 .comment-text {
   padding: 5px;
+  border: none;
+  border-top: 1px solid gray;
+  outline: none;
 }
 
 .comments-content {
-  padding: 20px;
+  height: 100%;
+  padding: 20px 10px;
   display: grid;
 }
 
@@ -59,6 +79,7 @@
   display: grid;
   grid-auto-rows: 30px;
   justify-content: flex-end;
+  overflow-y: auto;
 }
 
 .delete-comment {
